WebCore/workers/WorkerScriptLoader.h
@@ -30,6 +30,7 @@
 
 #if ENABLE(WORKERS)
 
+#include "KURL.h"
 #include "ResourceResponse.h"
 #include "ScriptString.h"
 #include "TextResourceDecoder.h"
@@ -41,14 +42,27 @@ namespace WebCore {
     class ScriptExecutionContext;
     class WorkerScriptLoaderClient;
 
+    enum URLCompletionPolicy {
+        CompleteURL,
+        DoNotCompleteURL
+    };
+
+    enum CrossOriginLoadPolicy {
+        DenyCrossOriginLoad,
+        AllowCrossOriginLoad
+    };
+
     class WorkerScriptLoader : public ThreadableLoaderClient {
     public:
         WorkerScriptLoader();
 
-        void loadSynchronously(ScriptExecutionContext*, const String& url, CrossOriginRedirectPolicy);
-        void loadAsynchronously(ScriptExecutionContext*, const String& url, CrossOriginRedirectPolicy, WorkerScriptLoaderClient*);
+        void loadSynchronously(ScriptExecutionContext*, const String& url, URLCompletionPolicy, CrossOriginLoadPolicy);
+        void loadAsynchronously(ScriptExecutionContext*, const String& url, URLCompletionPolicy, CrossOriginLoadPolicy, WorkerScriptLoaderClient*);
+
+        void notifyError();
 
         const String& script() const { return m_script; }
+        const KURL& url() const { return m_url; }
         bool failed() const { return m_failed; }
         unsigned long identifier() const { return m_identifier; }
 
@@ -60,6 +74,7 @@ namespace WebCore {
         virtual void didReceiveAuthenticationCancellation(const ResourceResponse&);
 
     private:
+        PassOwnPtr<ResourceRequest> createResourceRequest(ScriptExecutionContext*, const String& url, URLCompletionPolicy, CrossOriginLoadPolicy);
         void notifyFinished();
 
         WorkerScriptLoaderClient* m_client;
@@ -67,6 +82,7 @@ namespace WebCore {
         String m_responseEncoding;        
         RefPtr<TextResourceDecoder> m_decoder;
         String m_script;
+        KURL m_url;
         bool m_failed;
         unsigned long m_identifier;
     };
